# rust_and_ruin

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  turrent.md
examples/: turret_lock_demo.rs
src/: components.rs  lib.rs  main.rs  resources.rs
src/camera/: mod.rs
src/mech/: components.rs  lower_bodies.rs  mod.rs  traits.rs  upper_bodies.rs  weapons.rs
src/rendering/: mod.rs
src/systems/: attack_target_propagation.rs  collision.rs  input.rs  mech_assembly.rs  mech_movement.rs  mod.rs  movement.rs  projectile.rs  tank_movement.rs  turret_control.rs  upper_body_control.rs  visual_effects.rs  weapon_control.rs
tasks/: 3d_physics_migration.md  tank_rotation_todo.md  tank_shell_physics_update.md  todo.md  turret_control_fix.md
tests/: camera_tests.rs  color_rendering_test.rs  fragment_shell_tests.rs  integration_tests.rs  mech_movement_integration_test.rs  mech_rotation_test.rs  mech_tests.rs  tank_movement_tests.rs  turret_angle_calculation_tests.rs  turret_facing_tests.rs  turret_hierarchy_test.rs  turret_lock_on_test.rs  turret_no_mouse_tracking_test.rs  turret_tracking_tests.rs
