[package]
name = "rust_and_ruin"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A 2D Mech Hero RTS game with real projectile physics"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[example]]
name = "turret_lock_demo"
path = "examples/turret_lock_demo.rs"

[dependencies]
# Using Bevy without problematic features
bevy = { version = "0.12", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline", 
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_asset",
    "bevy_scene",
    "bevy_animation",
    "bevy_gizmos",
    "png",
    "jpeg",
    "x11",
] }
bevy_rapier3d = "0.23"
rand = "0.8"

# Enable optimizations for dependencies in debug mode
[profile.dev.package."*"]
opt-level = 3

# Enable higher optimizations for release builds
[profile.release]
opt-level = 3
lto = "thin"
